config railway mysql