@@ -15,7 +15,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -28,62 +27,117 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-            .csrf(AbstractHttpConfigurer::disable)
-            // Kích hoạt CORS với config bên dưới
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) 
-            .authorizeHttpRequests(auth -> auth
-                // QUAN TRỌNG: Cho phép method OPTIONS đi qua mà không cần token
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() 
-                
-                // PUBLIC
-                .requestMatchers("/images/**", "/api/auth/**", "/api/payment/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/courts/**", "/api/categories/**", "/api/reviews/**", "/api/bookings/check-availability").permitAll()
-                .requestMatchers("/v3/api-docs/**", "/swagger-ui/**").permitAll()
 
-                // ADMIN & USER routes (Giữ nguyên code của bạn)
+        http
+            // ❌ Tắt CSRF vì dùng JWT
+            .csrf(AbstractHttpConfigurer::disable)
+
+            // ✅ Bật CORS
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+            // ✅ Stateless (JWT)
+            .sessionManagement(session ->
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+
+            // ✅ Phân quyền API
+            .authorizeHttpRequests(auth -> auth
+
+                // ⚠️ BẮT BUỘC: Cho OPTIONS (CORS preflight)
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                // ===== PUBLIC API =====
+                .requestMatchers(
+                        "/api/auth/**",
+                        "/api/payment/**",
+                        "/images/**",
+                        "/v3/api-docs/**",
+                        "/swagger-ui/**"
+                ).permitAll()
+
+                .requestMatchers(
+                        HttpMethod.GET,
+                        "/api/courts/**",
+                        "/api/categories/**",
+                        "/api/reviews/**",
+                        "/api/bookings/check-availability"
+                ).permitAll()
+
+                // ===== ADMIN =====
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
                 .requestMatchers("/api/bookings/all").hasRole("ADMIN")
                 .requestMatchers("/api/bookings/*/confirm").hasRole("ADMIN")
-                .requestMatchers("/api/bookings/*/cancel").hasAnyRole("ADMIN", "USER")
-                .requestMatchers(HttpMethod.POST, "/api/courts/**", "/api/categories/**").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.PUT, "/api/courts/**", "/api/categories/**").hasRole("ADMIN")
-                .requestMatchers(HttpMethod.DELETE, "/api/courts/**", "/api/categories/**").hasRole("ADMIN")
 
+                .requestMatchers(
+                        HttpMethod.POST,
+                        "/api/courts/**",
+                        "/api/categories/**"
+                ).hasRole("ADMIN")
+
+                .requestMatchers(
+                        HttpMethod.PUT,
+                        "/api/courts/**",
+                        "/api/categories/**"
+                ).hasRole("ADMIN")
+
+                .requestMatchers(
+                        HttpMethod.DELETE,
+                        "/api/courts/**",
+                        "/api/categories/**"
+                ).hasRole("ADMIN")
+
+                // ===== USER / AUTH =====
+                .requestMatchers("/api/bookings/*/cancel").hasAnyRole("ADMIN", "USER")
                 .requestMatchers("/api/bookings/**").authenticated()
-                .requestMatchers("/api/reviews").authenticated()
+                .requestMatchers("/api/reviews/**").authenticated()
                 .requestMatchers("/api/users/**").authenticated()
 
+                // ===== DEFAULT =====
                 .anyRequest().authenticated()
             )
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+            // ✅ Authentication provider
             .authenticationProvider(authenticationProvider)
+
+            // ✅ JWT filter
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-   @Bean
+    // =========================
+    // ===== CORS CONFIG =======
+    // =========================
+    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // 👇 CẤU HÌNH CHUẨN: Cho phép Localhost và Vercel
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",              // Để bạn test ở máy nhà
-            "https://badminton-sals.vercel.app"   // Link Frontend chính thức (NHỚ BỎ DẤU / Ở CUỐI)
+
+        // ✅ Local + Vercel (kể cả preview)
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:3000",
+                "https://*.vercel.app"
         ));
 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
-        
-        // Cho phép các header cần thiết (Authorization để gửi Token)
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "x-auth-token"));
-        
-        // 👇 QUAN TRỌNG: Cho phép gửi Cookie/Token xác thực
-        // Dòng này bắt buộc phải là TRUE khi bạn chỉ định rõ domain (không dùng *)
+        configuration.setAllowedMethods(List.of(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"
+        ));
+
+        configuration.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "x-auth-token"
+        ));
+
+        // 👇 Để frontend đọc được Authorization header
+        configuration.setExposedHeaders(List.of("Authorization"));
+
+        // ⚠️ Bắt buộc TRUE khi dùng JWT + domain cố định
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
